Don't repeat header groups when one row of content doesn't fit on the first page

https://drafts.csswg.org/css-tables-3/#repeated-headers tells us that where
there isn't 'enough space to insert at least one content row, users agents
must drop the repeated header.'

BUG=621258

Review-Url: https://codereview.chromium.org/2199553002
Cr-Commit-Position: refs/heads/master@{#409413}

Former-commit-id: b69173bcab740a91977294f1dc2f024b398cebf5